--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "com.slax.inventorysystemevents",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"displayName": "Inventory System Events",
 	"description": "An extension for Slax Inventory System using Slax Event System",
 	"unity": "2019.1",
-	"unityRelease": "0b5",
 	"keywords": [
 		"InventorySystemEvents",
 		"Inventory",
@@ -12,11 +11,12 @@
 		"Slax"
 	],
 	"author": {
+		"url": "https://github.com/FelixBole",
 		"name": "Felix Bole",
 		"email": "felix.slax@gmail.com"
 	},
 	"dependencies": {
-		"com.slax.inventorysystem": "*",
-		"com.slax.eventsystem": "*"
+		"com.slax.inventorysystem": "https://github.com/FelixBole/inventory-system.git",
+		"com.slax.eventsystem": "https://github.com/FelixBole/event-system.git"
 	}
 }
